# rwh

./: .gitignore  Color.hs  Expression.hs  IntMonoids.hs  InteractWith.hs  MyList.hs  MyMonadReader.hs  MyState.hs  NewInt.hs  PrintFirstWord.hs  README.md  RandomSupply.hs  RandomSupplySpec.hs  SimpleJSON.hs  TransposeText.hs  TurnDirection.hs  argenv.hs  asInt.hs  echo.hs  nodo.hs  passwd-lookup.hs  quickcheck.hs  randomState.hs  upcase.hs  warns
ch10/: PGM.hs  PPM2PGM.hs  PPM2PGMQC.hs  README.md  default.nix  mynetpbm.cabal  netpbm.cabal  plaintorawpgm.hs  ppmtopgm.hs  t.ascii.pgm
ch12/: EAN13.hs  EAN13QC.hs  README.md  default.nix  ean13.cabal
ch12/samples/: 2.ppm  3.ppm  4.ppm
ch14/: MyState.hs  MyStateSpec.hs  mystate.cabal
ch15/: HandleIO.hs  LogIO.hs  MonadHandle.hs  MonadHandleSpec.hs  README.md  RandomSupplySpec.hs  lookupM.hs
ch16/parsec/: 2.http  6.http  CSV.hs  HttpRequestParser.hs  HttpRequestParserTest.hs  JSONParser.hs  JSONParserTest.hs  URIParser.hs  URLQueryParser.hs  s1.json
ch18/: CountFoldersContent.hs  CountFoldersContentSpec.hs  MyExceptT.hs  MyExceptTParse.hs  MyExceptTParseSpec.hs  MyExceptTSpec.hs  README.md
ch19/: README.md  divBy.hs  dynex.hs
ch22/: OptParseREPL.hs  PodDB.hs  PodDBTest.hs  PodDownload.hs  PodDownloadTest.hs  PodParser.hs  PodParserTest.hs  PodTypes.hs  README.md  default.nix  example-rss.xml  podcatcher.cabal  podcatcher.hs  thisamericanlife.org-rss.xml
ch28/: GameInventory.hs
dlist/: DList.hs  DListTest.hs
ean13/: EAN13.hs  EAN13QC.hs  findean13.hs
ean13-ui/: Helper.hs  HelperSpec.hs  Main.hs  Model.hs  README.md  Resize.hs  default.nix  deploy.sh  ean13-ui.cabal  resize.js
ean13-ui/html/: index.html  style.css
ean13-ui/samples/: README.md  cors.json  upload.sh
ean13/samples/: 1.ppm
find/: ControlledVisit.hs  Info.hs  Predicate.hs
glob/: ExtGlob.hs  Glob.hs  GlobMatcher.hs  GlobRegex.hs  GlobRegexTest.hs  Logger.hs  coverage.sh
json/: JSON.hs  SimpleJSON.hs  myjson.cabal
lazy-io/: LazyIO.hs  lazy-io.cabal
mypretty/: JSON.hs  Prettifier.hs  PrettifierQC.hs  PrettyJSON.hs  SimpleJSON.hs  install.sh  mypretty.cabal
netpbm/: NetpbmCommon.hs  PGM.hs  PPM.hs  ean13_2.ppm  feep.ascii.pgm  netpbm.cabal  white_rect.ppm  white_sq.ppm
parsec/: 1.http  2.http  3.http  4.http  5.http  HttpRequestParser.hs  HttpRequestParserTest.hs  LimitedStream.hs  URI.hs  URIParser.hs  URLQueryParser.hs  nested_parser.hs
passwd/: PasswdLookup.hs  PasswdLookupTest.hs  passwd  passwd-lookup.hs
pgm/: PGM.hs  Parser.hs
symbol/: SymbolArith.hs  SymbolArithTest.hs
