name:                mynetpbm
version:             0.1
synopsis:            Universal parser combinators. Functions to work with netpbm format.
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     NetpbmCommon, Parser, PGM, PPM, PPM2PGM
  build-depends:       base, transformers >=0.5 && <0.6, bytestring >=0.10 && <0.11, array >=0.5 && <0.6, split >=0.2 && <0.3
  default-language:    Haskell2010

executable ppmtopgm
  main-is:             ppmtopgm.hs
  other-modules:       NetpbmCommon, Parser, PGM, PPM, PPM2PGM
  build-depends:       base, transformers >=0.5 && <0.6, bytestring >=0.10 && <0.11, array >=0.5 && <0.6, split >=0.2 && <0.3, optparse-generic
  default-language:    Haskell2010