name:                mynetpbm
version:             0.1
synopsis:            Universal parser combinators. Functions to work with netpbm format.
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     NetpbmCommon, Parser, PGM, PPM, PPM2PGM
  build-depends:       base, transformers, bytestring, array, split
  default-language:    Haskell2010

executable ppmtopgm
  main-is:             ppmtopgm.hs
  other-modules:       NetpbmCommon, Parser, PGM, PPM, PPM2PGM
  build-depends:       base, transformers, bytestring, array, split, optparse-generic
  default-language:    Haskell2010