cabal-version:       >=1.10
name:                ean13-ui
version:             0.1.0.0
author:              Ilya Silvestrov
maintainer:          tellary@gmail.com
build-type:          Simple

executable findean13-ui
  main-is:             Main.hs
  other-modules:       Helper, Model
  build-depends:       base, ghcjs-base, miso, mynetpbm, ean13,
                       split, array, transformers, bytestring,
                       containers, optparse-generic,
                       JuicyPixels, base-encoding, attoparsec,
                       vector, async
  js-sources:          resize.js
  default-language:    Haskell2010
