cabal-version:       >=1.10
name:                ean13-ui
version:             0.1.0.0
author:              Ilya Silvestrov
maintainer:          tellary@gmail.com
build-type:          Simple

executable findean13-ui
  main-is:             Main.hs
  other-modules:       Helper, Model, Resize
  build-depends:       base, miso, ghcjs-dom, mynetpbm, ean13,
                       split, array, transformers, bytestring,
                       containers, JuicyPixels, base-encoding,
                       attoparsec, vector, async, network-uri
  if impl(ghcjs)
    build-depends: ghcjs-base
  else
    build-depends:
       jsaddle, jsaddle-warp, transformers, warp, websockets
  js-sources:          resize.js
  default-language:    Haskell2010
