Name:              mypretty
Version:           0.1

Synopsis:          My pretty printing library, with JSON support
Description:
  A simple pretty-printing library that illustrates
  how to develop a Haskell library.
Author:            My Self
Maintainer:        tellary@gmail.com

Cabal-Version:     >= 1.2
Build-Type:        Simple

library
  Exposed-Modules: Prettifier
                   PrettyJSON
  Build-Depends:   myjson, base >= 2.0
